--- a/PL_Python01.ipynb
+++ b/PL_Python01.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "618396bd",
+   "id": "6f061c52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7eda1b00",
+   "id": "78661b6a",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1336c602",
+   "id": "fe842e13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "28fa6856",
+   "id": "7a75ac11",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bbf50502",
+   "id": "b8889d26",
    "metadata": {},
    "outputs": [
     {
@@ -78,8 +78,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "9a500bb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str2 = \"總判賠金額為25688，判賠比例為被告七成、原告三成\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5a796640",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_money = 25688\n",
+    "b_money = t_money*0.7  #被告\n",
+    "r_money = t_money*0.3  #原告"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "99844805",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "被告須繳罰金為 17981.6 元\n",
+      "原告需繳罰金為 7706.4 元\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"被告須繳罰金為\",b_money,\"元\")\n",
+    "print(\"原告需繳罰金為\",r_money,\"元\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "13c21cbd",
+   "id": "bb4c8fd6",
    "metadata": {},
    "outputs": [],
    "source": []
