電腦快沒電了

--- a/PL_Python01.ipynb
+++ b/PL_Python01.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "74c58c86",
+   "id": "07e4517f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7414ed9f",
+   "id": "36ef7f26",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c4e31e8a",
+   "id": "0b23c8de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8cb88c2b",
+   "id": "67394626",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a28439d9",
+   "id": "a8540ac5",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e045a33b",
+   "id": "b6cea2ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a8128e18",
+   "id": "23b08a4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,33 +102,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "776fbd28",
+   "execution_count": 13,
+   "id": "0572c4ad",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "被告須繳罰金為 17981.6 元\n",
-      "原告需繳罰金為 7706.4 元\n"
+      "被告須繳罰金為 17981 元\n",
+      "原告需繳罰金為 7706 元\n"
      ]
     }
    ],
    "source": [
-    "print(\"被告須繳罰金為\",b_money,\"元\")\n",
-    "print(\"原告需繳罰金為\",r_money,\"元\")"
+    "print(\"被告須繳罰金為\",int(b_money),\"元\")\n",
+    "print(\"原告需繳罰金為\",int(r_money),\"元\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b4c68c2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "被告應付原告違約金1805元，利息以日利息0.0005計算，從判賠日1/19到3/19付款日，被告函違約金和利息應給原告多少\n"
+     ]
+    }
+   ],
+   "source": [
+    "#練習二\n",
+    "str3 = \"被告應付原告違約金1805元，利息以日利息複利0.0005計算，從判賠日1/19到3/19付款日，被告函違約金和利息應給原告多少\"\n",
+    "print(str3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9519d379",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1859.956488708298\n"
+     ]
+    }
+   ],
+   "source": [
+    "rmoney = 1805\n",
+    "R = 0.0005\n",
+    "\n",
+    "tmoney = rmoney*(1 + )**60\n",
+    "print(tmoney)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aba7ee6",
+   "id": "99fa43b7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#練習二"
-   ]
+   "source": []
   }
  ],
  "metadata": {
