--- a/PL_Python01.ipynb
+++ b/PL_Python01.ipynb
@@ -207,8 +207,239 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "981e0776",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>學號\\t性別\\t分發宿舍\\t分發寢室\\t分發床號</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40909026E\\t女\\t女一舍\\t5111\\t3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>40920120L\\t女\\t女一舍\\t5111\\t4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>40820124L\\t女\\t女一舍\\t5112\\t2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40826013L\\t女\\t女一舍\\t5112\\t3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>40707218E\\t女\\t女一舍\\t5113\\t3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     學號\\t性別\\t分發宿舍\\t分發寢室\\t分發床號\n",
+       "0  40909026E\\t女\\t女一舍\\t5111\\t3\n",
+       "1  40920120L\\t女\\t女一舍\\t5111\\t4\n",
+       "2  40820124L\\t女\\t女一舍\\t5112\\t2\n",
+       "3  40826013L\\t女\\t女一舍\\t5112\\t3\n",
+       "4  40707218E\\t女\\t女一舍\\t5113\\t3"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 練習篩選列表\n",
+    "import pandas as pd\n",
+    "data = pd.read_csv(\"data.csv\")\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "539c8b89",
+   "metadata": {},
+   "source": [
+    "導入分發寢室和所有學號，並輸入使用者學號"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "33eb9a63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>學號</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40909026E</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>40920120L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>40820124L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40826013L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>40707218E</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          學號\n",
+       "0  40909026E\n",
+       "1  40920120L\n",
+       "2  40820124L\n",
+       "3  40826013L\n",
+       "4  40707218E"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sub = input(\"請輸入學號？\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ca979c12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>分發寢室</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3093</th>\n",
+       "      <td>70630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3094</th>\n",
+       "      <td>70714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3095</th>\n",
+       "      <td>70714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3096</th>\n",
+       "      <td>70714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3097</th>\n",
+       "      <td>70714</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       分發寢室\n",
+       "3093  70630\n",
+       "3094  70714\n",
+       "3095  70714\n",
+       "3096  70714\n",
+       "3097  70714"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roomnumber.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "85456cde",
+   "id": "b6bcb978",
    "metadata": {},
    "outputs": [],
    "source": []
