--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f120900c",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "{'encoding': 'Big5', 'confidence': 0.99, 'language': 'Chinese'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "db040542",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "4  40707218E  女  女一舍  5113     3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "193e225f",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "[154 rows x 5 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,73 +285,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "b3cbae50",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "請輸入學號41071205h\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>學號</th>\n",
-       "      <th>性別</th>\n",
-       "      <th>分發宿舍</th>\n",
-       "      <th>分發寢室</th>\n",
-       "      <th>分發床號</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>317</th>\n",
-       "      <td>41071205H</td>\n",
-       "      <td>女</td>\n",
-       "      <td>女一舍</td>\n",
-       "      <td>5230</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            學號 性別 分發宿舍  分發寢室  分發床號\n",
-       "317  41071205H  女  女一舍  5230     3"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "##嘗試出入學號找出寢室\n",
     "s = str.upper(input(\"請輸入學號\")) ## 讓輸入學號尾字統一變大寫，以符合資料\n",
     "data[data[\"學號\"] == s]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9479b67c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3b84ace",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
