--- a/week4_practice.ipynb
+++ b/week4_practice.ipynb
@@ -2,40 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "de13f084",
+   "execution_count": 38,
+   "id": "b7c40eb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 界定、輸入、執行分開比較好除錯\n",
+    "d = {\"學號\" : [\"40909026E\",\"40826013L\",\"40707218E\",\"40830043A\",\"40957004O\"],\n",
+    "     \"分發寢室\" : [\"5111\",\"5112\",\"5113\",\"5116\",\"5118\"]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "0a647854",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "學號40909026E\n"
+      "輸入學號40707218E\n"
      ]
     }
    ],
    "source": [
-    "## \n",
-    "d = {\"學號\" : [\"40909026E\",\"40826013L\",\"40707218E\",\"40830043A\",\"40957004O\"],\n",
-    "     \"分發寢室\" : [\"5111\",\"5112\",\"5113\",\"5116\",\"5118\"]}\n",
-    "n = 0\n",
-    "s = input(\"學號\")\n",
-    "for s in \"學號\":\n",
-    "    if s == \"學號\":\n",
-    "        print(d[\"分發寢室\"][n])\n",
-    "    else:\n",
-    "        n = n+1\n",
-    "        \n",
-    "    "
+    "s = input(\"輸入學號\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "93baf8ae",
+   "execution_count": 40,
+   "id": "16ab061a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5113\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 0\n",
+    "for i in d[\"學號\"]:    \n",
+    "    #print(i)\n",
+    "    if s == i:\n",
+    "        print(d[\"分發寢室\"][n])\n",
+    "    else:\n",
+    "        n = n+1  "
+   ]
   }
  ],
  "metadata": {
