--- a/week4_practice.ipynb
+++ b/week4_practice.ipynb
@@ -58,34 +58,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "2b3e0856",
    "metadata": {},
    "outputs": [],
    "source": [
     "#建檔\n",
-    "person1 = {\"name\" : [\"阿程\"],\n",
+    "person1 = {\"name\" : \"阿程\",\n",
     "           \"age\" : 40,\n",
-    "           \"law\" : [(\"第16條\",\"裝置高音量喇叭或其他產生噪音器物\"),\n",
-    "                    (\"第17條\",\"汽車不依限期參加定期檢驗或臨時檢驗\"),\n",
-    "                    (\"第62條\",\"汽車駕駛人駕駛汽車肇事\"),\n",
-    "                    (\"第21條\",\"未領有駕駛執照駕駛小型車或機車\")],\n",
-    "           \"money\" : [1600,1500,2500,10500]}\n",
-    "person2 = {\"name\" : [\"阿力\"],\n",
+    "           \"law\" : {\"第16條\":\"裝置高音量喇叭或其他產生噪音器物\",\n",
+    "                    \"第17條\":\"汽車不依限期參加定期檢驗或臨時檢驗\",\n",
+    "                    \"第62條\":\"汽車駕駛人駕駛汽車肇事\",\n",
+    "                    \"第21條\":\"未領有駕駛執照駕駛小型車或機車\"},\n",
+    "           \"money\" : {\"第16條\":1600,\n",
+    "                      \"第17條\":1500,\n",
+    "                      \"第62條\":2500,\n",
+    "                      \"第21條\":10500}}\n",
+    "person2 = {\"name\" : \"阿力\",\n",
     "           \"age\" : 29,\n",
-    "           \"law\" : [(\"第12條\",\"汽車使用吊銷、註銷之牌照\")],\n",
-    "           \"money\" : [5000]}\n",
-    "person3 = {\"name\" : [\"阿瑤\"],\n",
+    "           \"law\" : {\"第12條\":\"汽車使用吊銷、註銷之牌照\"},\n",
+    "           \"money\" : {\"第12條\":5000}}\n",
+    "person3 = {\"name\" : \"阿瑤\",\n",
     "           \"age\" : 58,\n",
-    "           \"law\" : [(\"第82條\",\"未經許可在道路擺設攤位\"),\n",
-    "                    (\"第56條\",\"在禁止臨時停車處所停車\")],\n",
-    "           \"money\" : [2000,1000]}\n",
+    "           \"law\" : {\"第82條\":\"未經許可在道路擺設攤位\",\n",
+    "                    \"第56條\":\"在禁止臨時停車處所停車\"},\n",
+    "           \"money\" : {\"第82條\":2000,\n",
+    "                      \"第56條\":1000}}\n",
     "person = [person1[\"name\"],person2[\"name\"],person3[\"name\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "297462ec",
    "metadata": {},
    "outputs": [
@@ -93,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['阿程'], ['阿力'], ['阿瑤']]\n"
+      "['阿程', '阿力', '阿瑤']\n"
      ]
     }
    ],
