--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "abb0ed5e",
+   "metadata": {},
+   "source": [
+    "# 我的課程查詢器\n",
+    "## 原由\n",
+    "由於我曾經在學重考，因此有雙重學籍的問題。一開始有想過兩邊學校同時一起讀，所以兩間學校的畢業學分甚麼該修、甚麼已經完成，這些資料一度使我非常混亂"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 258,
    "id": "582b491f",
    "metadata": {},
    "outputs": [],
@@ -12,188 +22,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 259,
    "id": "a59972df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = open(\"ntnu.json\", encoding=\"utf-8\")\n",
-    "s = open(\"scu.json\", encoding=\"utf-8\")##打開資料，並調整編成碼"
+    "n = open(\"school.json\", encoding=\"utf-8\")##打開資料，並調整編成碼"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 260,
    "id": "f8165223",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ntnu = json.load(n)\n",
-    "scu = json.load(s)##json轉dict並命名"
+    "school = json.load(n)##json轉dict並命名"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 261,
    "id": "15808851",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'課程性質': '校共同必修', '課程名稱': '中文閱讀與思辯', '完成時間': '110上', '學分數': 2}\n",
-      "{'課程性質': '校共同必修', '課程名稱': '中文寫作與表達', '完成時間': '110下', '學分數': 2}\n",
-      "{'課程性質': '校共同必修', '課程名稱': '體育', '學分數': 4}\n",
-      "{'課程性質': '通識', '課程名稱': '日語(二)', '完成時間': '110下', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': '日本美術鑑賞', '完成時間': '110下', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': '社會科學領域', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': '自然科學領域', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': '邏輯運算領域', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': '學院共同課程', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': '跨域專業探索課程', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': '大學入門', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': '專題探究', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': 'MOOCs(限師大本校)', '學分數': 2}\n",
-      "{'課程性質': '大一必修', '課程名稱': '電腦影像處理', '完成時間': '110上', '學分數': 3}\n",
-      "{'課程性質': '大一必修', '課程名稱': '計算機概論', '學分數': 3}\n",
-      "{'課程性質': '大一必修', '課程名稱': '人力資源發展概論', '學分數': 3}\n",
-      "{'課程性質': '大一必修', '課程名稱': '基本設計', '學分數': 3}\n",
-      "{'課程性質': '大一必修', '課程名稱': '電子電路', '學分數': 3}\n",
-      "{'課程性質': '大一必修', '課程名稱': '人力資源管理', '學分數': 3}\n",
-      "{'課程性質': '大二必修', '課程名稱': '程式語言', '學分數': 3}\n",
-      "{'課程性質': '大二必修', '課程名稱': '網際網路概論', '學分數': 3}\n",
-      "{'課程性質': '大二必修', '課程名稱': '資料結構', '學分數': 3}\n",
-      "{'課程性質': '大三必修', '課程名稱': '電腦動畫', '完成時間': '110下', '學分數': 3}\n",
-      "{'課程性質': '大三必修', '課程名稱': '多媒體教材設計與製作', '學分數': 3}\n",
-      "{'課程性質': '大三必修', '課程名稱': '人員數據分析', '學分數': 3}\n",
-      "{'課程性質': '大三必修', '課程名稱': '專題製作（一）', '學分數': 1}\n",
-      "{'課程性質': '大四必修', '課程名稱': '專題製作（二）', '學分數': 1}\n",
-      "{'課程性質': '大一系選修', '課程名稱': '數位學習理論與實務', '學分數': 3}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '作業系統', '學分數': 3}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '網際網路設計', '學分數': 3}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '專業實習', '學分數': 3}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '電腦網路原理與實作', '學分數': 3}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '虛擬實境設計', '學分數': 3}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '數位遊戲設計', '學分數': 3}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '資料庫庫系統', '學分數': 3}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '系統分析與設計', '學分數': 3}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '計算機結構', '學分數': 3}\n",
-      "{'課程性質': '大四系選修', '課程名稱': '行動學習科技', '學分數': 3}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 261,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in ntnu:\n",
-    "    print(i)##確認ntnu已匯入"
+    "type(school)##確認資料型態"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "9f62ef81",
+   "execution_count": 262,
+   "id": "8bc27a66",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'課程性質': '校共同必修', '課程名稱': '國文一', '學分數': 2}\n",
-      "{'課程性質': '校共同必修', '課程名稱': '國文二', '學分數': 2}\n",
-      "{'課程性質': '校共同必修', '課程名稱': '體育', '學分數': 4}\n",
-      "{'課程性質': '特色課程', '課程名稱': '生活藝術', '學分數': 1}\n",
-      "{'課程性質': '特色課程', '課程名稱': '家庭科學', '學分數': 1}\n",
-      "{'課程性質': '通識', '課程名稱': '人文思維領域', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': '美學涵養領域', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': '外語學用語文化領域', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': '公民社會領域', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': '全球視野領域', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': '自然科學領域', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': '智慧社會領域', '學分數': 2}\n",
-      "{'課程性質': '通識', '課程名稱': '運動與健康促進領域', '學分數': 2}\n",
-      "{'課程性質': '大一必修', '課程名稱': '設計概論(一)', '學分數': 2}\n",
-      "{'課程性質': '大一必修', '課程名稱': '創作基礎(一)', '學分數': 3}\n",
-      "{'課程性質': '大一必修', '課程名稱': '設計概論(二)', '學分數': 2}\n",
-      "{'課程性質': '大一必修', '課程名稱': '創作基礎(二)', '學分數': 3}\n",
-      "{'課程性質': '大一必修', '課程名稱': '設計繪畫(一)', '學分數': 2}\n",
-      "{'課程性質': '大一必修', '課程名稱': '視覺心理學', '學分數': 2}\n",
-      "{'課程性質': '大一必修', '課程名稱': '設計繪畫(二)', '學分數': 2}\n",
-      "{'課程性質': '大一必修', '課程名稱': '3D電腦繪圖', '學分數': 2}\n",
-      "{'課程性質': '大二必修', '課程名稱': '電腦輔助設計(一)', '學分數': 2}\n",
-      "{'課程性質': '大二必修', '課程名稱': '電腦輔助設計(二)', '學分數': 2}\n",
-      "{'課程性質': '大二必修', '課程名稱': '跨域平台整合設計', '學分數': 2}\n",
-      "{'課程性質': '大二必修', '課程名稱': '後置特效處裡', '學分數': 2}\n",
-      "{'課程性質': '大二必修', '課程名稱': '專業英語聽講', '學分數': 2}\n",
-      "{'課程性質': '大二必修', '課程名稱': '媒體整合設計(一)', '學分數': 2}\n",
-      "{'課程性質': '大二必修', '課程名稱': '媒體設計史(一)', '學分數': 2}\n",
-      "{'課程性質': '大二必修', '課程名稱': '專業英語導讀', '學分數': 2}\n",
-      "{'課程性質': '大二必修', '課程名稱': '媒體整合設計(二)', '學分數': 2}\n",
-      "{'課程性質': '大二必修', '課程名稱': '媒體設計史(二)', '學分數': 2}\n",
-      "{'課程性質': '大三必修', '課程名稱': '創新媒體專題設計(一)', '學分數': 3}\n",
-      "{'課程性質': '大三必修', '課程名稱': '設計方法論', '學分數': 2}\n",
-      "{'課程性質': '大三必修', '課程名稱': '創新媒體專題設計(二)', '學分數': 3}\n",
-      "{'課程性質': '大三必修', '課程名稱': '作品集', '學分數': 2}\n",
-      "{'課程性質': '大四必修', '課程名稱': '專題概念', '學分數': 2}\n",
-      "{'課程性質': '大四必修', '課程名稱': '創新媒體畢業設計(一)', '學分數': 3}\n",
-      "{'課程性質': '大四必修', '課程名稱': '創新媒體畢業設計(二)', '學分數': 3}\n",
-      "{'課程性質': '大一系選修', '課程名稱': '數位編輯設計', '學分數': 2}\n",
-      "{'課程性質': '大一系選修', '課程名稱': '數位影像設計', '學分數': 2}\n",
-      "{'課程性質': '大一系選修', '課程名稱': '當代藝術史', '學分數': 2}\n",
-      "{'課程性質': '大一系選修', '課程名稱': '數位編輯設計製作', '學分數': 2}\n",
-      "{'課程性質': '大一系選修', '課程名稱': '跨域創作思考', '學分數': 2}\n",
-      "{'課程性質': '大一系選修', '課程名稱': '錄像實務創作', '學分數': 2}\n",
-      "{'課程性質': '大一系選修', '課程名稱': '媒體美學', '學分數': 2}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '圖像符號創作', '學分數': 2}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '3D型塑', '學分數': 2}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '創意程式設計', '學分數': 2}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '互動媒材與認知', '學分數': 2}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '實體運算', '學分數': 2}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '劇本實務與創作(一)', '學分數': 2}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '視覺語言(一)', '學分數': 2}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '設計志工服務', '學分數': 1}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '設計觀察與構思', '學分數': 2}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '圖像符號設計', '學分數': 2}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '劇本實務與創作(二)', '學分數': 2}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '後置特效處理與實務', '學分數': 2}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '設計學習服務', '學分數': 1}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '人文思潮', '學分數': 2}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '3D繪圖引擎', '學分數': 2}\n",
-      "{'課程性質': '大二系選修', '課程名稱': '視覺語言(二)', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '漫畫創作', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '數位音效構成', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '角色扮演', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '創新媒體工作營', '學分數': 3}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '數位媒體設計', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '使用者體驗設計', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '概念藝術設計', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '動態圖文影像設計(一)', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '數位雕塑與視覺發展(一)', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '(實)動畫設計與實習(一)', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '數位音效設計', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '3D型塑食物', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '使用者介面設計', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '概念藝術設計與應用', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '動態圖文影像設計(二)', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '數位雕塑與視覺發展(二)', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '(實)動畫設計與實習(二)', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '衍生性設計', '學分數': 2}\n",
-      "{'課程性質': '大三系選修', '課程名稱': '動畫創作工作營', '學分數': 3}\n",
-      "{'課程性質': '大四系選修', '課程名稱': '廣告企劃', '學分數': 2}\n",
-      "{'課程性質': '大四系選修', '課程名稱': '媒介訊息', '學分數': 2}\n",
-      "{'課程性質': '大四系選修', '課程名稱': '專業專題報告', '學分數': 2}\n",
-      "{'課程性質': '大四系選修', '課程名稱': '廣告企劃與策略', '學分數': 2}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in scu:\n",
-    "    print(i)##確認scu已匯入"
+    "data = school.get(\"學校\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "6c39dfe7",
+   "execution_count": 263,
+   "id": "1c30eb47",
    "metadata": {},
    "outputs": [
     {
@@ -202,19 +83,139 @@
        "list"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(scu)##what the fuck"
+    "type(data) ##發現層層包起(;Д;)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "id": "5ea0f45d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 設定計數器數值和變數\n",
+    "schlist = [\"師大\",\"實踐\"]\n",
+    "sublist = ['校共同必修','通識','大一必修','大二必修','大三必修','大四必修','大一系選修','大二系選修','大三系選修','大四系選修','特色課程']\n",
+    "sch = \"實踐\"\n",
+    "sub = \"大一必修\"\n",
+    "n = 0 #在第一層迴圈的計數器\n",
+    "r = 0 #在第二層迴圈的計數器\n",
+    "p = 0 #在第三層迴圈的計數器\n",
+    "#input(\"輸入師大或實踐\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "id": "6e55c548",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "設計概論(一)\n",
+      "創作基礎(一)\n",
+      "設計概論(二)\n",
+      "創作基礎(二)\n",
+      "設計繪畫(一)\n",
+      "視覺心理學\n",
+      "設計繪畫(二)\n",
+      "3D電腦繪圖\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 測試迴圈邏輯正確\n",
+    "for i in schlist:\n",
+    "    if sch == schlist[n]:\n",
+    "        for u in sublist:\n",
+    "            if sub == sublist[r]:\n",
+    "                for o in data[n].get(schlist[n])[r].get(sublist[r]):\n",
+    "                    print(data[n].get(schlist[n])[r].get(sublist[r])[p].get('課程名稱'))\n",
+    "                    p = p + 1\n",
+    "                r = r + 1\n",
+    "            else:\n",
+    "                r = r + 1\n",
+    "        n = n + 1\n",
+    "    else:\n",
+    "        n = n + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "id": "bf9e8167",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 定義 lesson(學校,課程性質)則印出課程名稱\n",
+    "def lesson(sch,sub):\n",
+    "    n = 0 #在第一層迴圈的計數器\n",
+    "    r = 0 #在第二層迴圈的計數器\n",
+    "    p = 0 #在第三層迴圈的計數器\n",
+    "    for i in schlist:\n",
+    "        if sch == schlist[n]:\n",
+    "            for u in sublist:\n",
+    "                if sub == sublist[r]:\n",
+    "                # print(data[n].get(schlist[n])[r].get(sublist[r]))\n",
+    "                    for o in data[n].get(schlist[n])[r].get(sublist[r]):\n",
+    "                        #rint(data[n].get(schlist[n])[r].get(sublist[r])[p].get('課程名稱'))\n",
+    "                        lesson = data[n].get(schlist[n])[r].get(sublist[r])[p].get('課程名稱')\n",
+    "                        p = p + 1\n",
+    "                        print(\"課程名稱：\",lesson)\n",
+    "                    r = r + 1\n",
+    "                else:\n",
+    "                    r = r + 1\n",
+    "            n = n + 1\n",
+    "        else:\n",
+    "            n = n + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "id": "3f9ce872",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sch = \"師大\"\n",
+    "sub = \"大一必修\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "id": "3d2619a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "課程名稱： 電腦影像處理\n",
+      "課程名稱： 計算機概論\n",
+      "課程名稱： 人力資源發展概論\n",
+      "課程名稱： 基本設計\n",
+      "課程名稱： 電子電路\n",
+      "課程名稱： 人力資源管理\n"
+     ]
+    }
+   ],
+   "source": [
+    "lesson(sch,sub)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bc27a66",
+   "id": "0760950e",
    "metadata": {},
    "outputs": [],
    "source": []
