--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "abb0ed5e",
+   "id": "c7128099",
    "metadata": {},
    "source": [
     "# 我的課程查詢器\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 304,
    "id": "582b491f",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 305,
    "id": "a59972df",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 306,
    "id": "f8165223",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 307,
    "id": "15808851",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "dict"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 307,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 308,
    "id": "8bc27a66",
    "metadata": {},
    "outputs": [],
@@ -73,8 +73,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
-   "id": "1c30eb47",
+   "execution_count": 309,
+   "id": "bdab4a06",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "list"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,44 +94,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
-   "id": "5ea0f45d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 設定計數器數值和變數\n",
-    "schlist = [\"師大\",\"實踐\"]\n",
-    "sublist = ['校共同必修','通識','大一必修','大二必修','大三必修','大四必修','大一系選修','大二系選修','大三系選修','大四系選修','特色課程']\n",
-    "sch = \"實踐\"\n",
-    "sub = \"大一必修\"\n",
-    "n = 0 #在第一層迴圈的計數器\n",
-    "r = 0 #在第二層迴圈的計數器\n",
-    "p = 0 #在第三層迴圈的計數器\n",
-    "#input(\"輸入師大或實踐\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 277,
-   "id": "6e55c548",
+   "execution_count": 310,
+   "id": "03864be3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "設計概論(一)\n",
-      "創作基礎(一)\n",
-      "設計概論(二)\n",
-      "創作基礎(二)\n",
-      "設計繪畫(一)\n",
-      "視覺心理學\n",
-      "設計繪畫(二)\n",
-      "3D電腦繪圖\n"
+      "輸入師大或實踐師大\n",
+      "輸入課程性質校共同必修\n"
      ]
     }
    ],
    "source": [
+    "# 輸入變數\n",
+    "sch = input(\"輸入師大或實踐\")\n",
+    "sub = input(\"輸入課程性質\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 311,
+   "id": "feaccf32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "中文閱讀與思辯\n",
+      "中文寫作與表達\n",
+      "體育\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 設定計數器數值\n",
+    "schlist = [\"師大\",\"實踐\"]\n",
+    "sublist = ['校共同必修','通識','大一必修','大二必修','大三必修','大四必修','大一系選修','大二系選修','大三系選修','大四系選修','特色課程']\n",
+    "n = 0 #在第一層迴圈的計數器\n",
+    "r = 0 #在第二層迴圈的計數器\n",
+    "p = 0 #在第三層迴圈的計數器\n",
+    "\n",
     "# 測試迴圈邏輯正確\n",
     "for i in schlist:\n",
     "    if sch == schlist[n]:\n",
@@ -150,8 +155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
-   "id": "bf9e8167",
+   "execution_count": 312,
+   "id": "35b5d544",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,9 +169,9 @@
     "        if sch == schlist[n]:\n",
     "            for u in sublist:\n",
     "                if sub == sublist[r]:\n",
-    "                # print(data[n].get(schlist[n])[r].get(sublist[r]))\n",
+    "                # print(data[n].get(schlist[n])[r].get(sublist[r])) #測試\n",
     "                    for o in data[n].get(schlist[n])[r].get(sublist[r]):\n",
-    "                        #rint(data[n].get(schlist[n])[r].get(sublist[r])[p].get('課程名稱'))\n",
+    "                        #rint(data[n].get(schlist[n])[r].get(sublist[r])[p].get('課程名稱')) #測試\n",
     "                        lesson = data[n].get(schlist[n])[r].get(sublist[r])[p].get('課程名稱')\n",
     "                        p = p + 1\n",
     "                        print(\"課程名稱：\",lesson)\n",
@@ -180,31 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
-   "id": "3f9ce872",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sch = \"師大\"\n",
-    "sub = \"大一必修\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 289,
-   "id": "3d2619a0",
+   "execution_count": 313,
+   "id": "9f9af708",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "課程名稱： 電腦影像處理\n",
-      "課程名稱： 計算機概論\n",
-      "課程名稱： 人力資源發展概論\n",
-      "課程名稱： 基本設計\n",
-      "課程名稱： 電子電路\n",
-      "課程名稱： 人力資源管理\n"
+      "課程名稱： 中文閱讀與思辯\n",
+      "課程名稱： 中文寫作與表達\n",
+      "課程名稱： 體育\n"
      ]
     }
    ],
@@ -215,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0760950e",
+   "id": "5498eb8f",
    "metadata": {},
    "outputs": [],
    "source": []
